--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "commonjs",
-    "target": "es5",
+    "module": "es2015",
+    "target": "es6",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
